# backend-template

./: Taskfile.yml  alembic.ini  pyproject.toml
src/app/adapters/graphql/: context.py  dto.py  schema.py
src/app/adapters/graphql/apps/books/: _mutations.py  _query.py
src/app/core/domain/books/: models.py
src/lib/: settings.py
tests/plugins/: http_app.py
